# wisp

./: .gitignore  README.md  cabal.project  flake.nix  shell.nix
.claude/skills/: wisp-backend.md
docs/: SPECS.md  agents.md  architecture.md  chat.md  development.md  policy.md  roadmap.md  spec.md  tools.md  vocab.md
docs/flows/: 01_quarantine_interview.md  02_feedback_capture_cluster.md
docs/plans/: 2025-02-19-github-integration-design.md  2025-02-19-github-integration-implementation.md  2025-02-21-tui-knowledge-hub.md  2025-02-22-github-push-event-diffs-design.md  2025-02-22-github-push-event-diffs.md  2026-02-01-technical-design.md  2026-02-02-classification-pipeline.md  2026-02-02-cli-completeness.md  2026-02-02-conversational-agent.md  2026-02-03-concierge-classify-pending.md  2026-02-03-notification-system-design.md  2026-02-03-notification-system.md  2026-02-03-quarantine-interview.md  2026-02-04-chat-improvements.md  2026-02-04-scheduler-agent.md  2026-02-04-timezone-display.md  2026-02-05-insights-agent.md  2026-02-05-multi-agent-sessions.md  2026-02-06-agent-runs-design.md  2026-02-06-agent-runs-implementation.md  2026-02-07-agent-runs-phase2.md  2026-02-07-agent-runs-phase3.md  2026-02-17-documentation.md  2026-02-18-agents-and-skills-design.md  2026-02-18-knowledge-memory-design.md  2026-02-18-knowledge-memory-implementation.md  2026-02-20-documents-design.md  2026-02-20-documents-implementation.md  2026-02-20-wisp-tui-design.md  2026-02-20-wisp-tui-implementation.md  2026-02-22-knowledge-system.md  2026-02-22-session-persistence.md  2026-02-23-github-research-skills-design.md  2026-02-23-github-research-skills-implementation.md  2026-02-23-project-knowledge-extraction.md  (+3 more)
wisp-cli/: wisp-cli.cabal
wisp-cli/app/: Config.hs  Main.hs  Time.hs
wisp-core/: wisp-core.cabal
wisp-core/src/Wisp/: Client.hs
wisp-core/src/Wisp/Client/: Activities.hs  Documents.hs  SSE.hs  Types.hs
wisp-srv/: README.md  wisp-srv.cabal  wisp.yaml  wisp.yaml.example
wisp-srv/app/: Main.hs
wisp-srv/migrations/: 001_entities.sql  002_jobs.sql  003_receipts.sql  004_auth.sql  005_poll_state.sql  006_activities.sql  007_accounts.sql  007_add_notified_at.sql  008_notification_state.sql  008_people.sql  011_agent_runs.sql  012_notes.sql  013_memory.sql  014_tenants.sql  015_activities_tenant.sql  016_account_providers.sql  017_account_unique_constraint.sql  018_documents.sql  019_session_last_message.sql  020_activity_documents.sql  021_seed_projects.sql  022_document_parent_id.sql  023_project_knowledge_type.sql
wisp-srv/seeds/: 001_agents_and_skills.sql
wisp-srv/src/Agents/: Concierge.hs  Core.hs  Dispatcher.hs  Housekeeper.hs  Insights.hs  Run.hs  Scheduler.hs
wisp-srv/src/Agents/Concierge/: Classifier.hs
wisp-srv/src/App/: Config.hs  Env.hs  Monad.hs
wisp-srv/src/Domain/: Account.hs  Activity.hs  ActivityDocument.hs  Agent.hs  Chat.hs  ChatAction.hs  ChatEvent.hs  Classification.hs  Document.hs  Id.hs  Person.hs  ProjectClassification.hs  ProjectKnowledge.hs  ProjectSuggestion.hs  Receipt.hs  Run.hs  Schema.hs  Session.hs  Skill.hs  Soul.hs  Summary.hs  Tenant.hs
wisp-srv/src/Http/: Routes.hs  Server.hs
wisp-srv/src/Http/Handlers/: Activities.hs  Agents.hs  Auth.hs  Chat.hs  ChatStream.hs  Documents.hs  Health.hs  People.hs  Pipeline.hs  Runs.hs  Skills.hs  Tenants.hs
wisp-srv/src/Infra/Claude/: Client.hs
wisp-srv/src/Infra/Db/: Account.hs  Activity.hs  ActivityDocument.hs  Auth.hs  Document.hs  Entity.hs  Jobs.hs  Migrations.hs  Notification.hs  Person.hs  PollState.hs  Receipt.hs  Run.hs  Session.hs  Soul.hs  Summary.hs  Tenant.hs
wisp-srv/src/Infra/GitHub/: Auth.hs  Commits.hs  Events.hs
wisp-srv/src/Infra/Google/: Auth.hs  Calendar.hs  Gmail.hs  TokenManager.hs
wisp-srv/src/Services/: CalendarPoller.hs  Chat.hs  ClassificationQueue.hs  Classifier.hs  GitHubPoller.hs  GmailPoller.hs  Knowledge.hs  Notification.hs  NotificationLoop.hs  PeopleResolver.hs  Pipeline.hs  ProjectUpdater.hs  Router.hs  Scheduler.hs  Summarizer.hs  Tavily.hs
wisp-srv/src/Skills/: Base.hs  Concierge.hs  GitHub.hs  Housekeeper.hs  Insights.hs  Librarian.hs  Reflection.hs  Registry.hs  Research.hs  Scheduler.hs
wisp-srv/src/Skills/Concierge/: Classifier.hs
wisp-srv/test/: Main.hs  TestEnv.hs
wisp-srv/test/Agents/: ConciergeAgentSpec.hs  ConciergeSpec.hs  DispatcherSpec.hs  InsightsSpec.hs  RunSpec.hs  SchedulerSpec.hs
wisp-srv/test/Agents/Concierge/: ClassifierSpec.hs
wisp-srv/test/App/: ConfigSpec.hs
wisp-srv/test/Domain/: AccountSpec.hs  ActivityDocumentSpec.hs  ActivitySpec.hs  AgentSpec.hs  ChatSpec.hs  ClassificationSpec.hs  DocumentSpec.hs  IdSpec.hs  PersonSpec.hs  ProjectClassificationSpec.hs  ReceiptSpec.hs  RunSpec.hs  SchemaSpec.hs  SessionSpec.hs  SkillSpec.hs  SoulSpec.hs  SummarySpec.hs  TenantSpec.hs
wisp-srv/test/Http/Handlers/: HealthSpec.hs
wisp-srv/test/Infra/Claude/: ClientSpec.hs
wisp-srv/test/Infra/Db/: AccountSpec.hs  ActivityDocumentSpec.hs  ActivityParentSpec.hs  ActivitySpec.hs  DocumentSpec.hs  EntitySpec.hs  JobsSpec.hs  MigrationsSpec.hs  PersonSpec.hs  PollStateSpec.hs  ReceiptSpec.hs  RunSpec.hs  SessionSpec.hs  SoulSpec.hs  SummarySpec.hs  TenantSpec.hs
wisp-srv/test/Infra/GitHub/: AuthSpec.hs  CommitExtractionSpec.hs  EventsSpec.hs
wisp-srv/test/Infra/Google/: AuthSpec.hs  CalendarSpec.hs  GmailSpec.hs  TokenManagerSpec.hs
wisp-srv/test/Services/: CalendarPollerSpec.hs  ChatSpec.hs  ClassificationQueueSpec.hs  ClassifierSpec.hs  GitHubPollerIntegrationSpec.hs  GitHubPollerSpec.hs  GmailPollerSpec.hs  NotificationSpec.hs  PeopleResolverSpec.hs  PipelineSpec.hs  ProjectUpdaterSpec.hs  RouterSpec.hs
wisp-srv/test/Skills/: ConciergeSpec.hs  InsightsSpec.hs  ReflectionSpec.hs  SchedulerSpec.hs
wisp-srv/test/Skills/Concierge/: ClassifierSpec.hs
wisp-tui/: wisp-tui.cabal
wisp-tui/app/: Main.hs
wisp-tui/src/Tui/: DataLoader.hs  Markdown.hs  Types.hs
wisp-tui/src/Tui/Views/: Activities.hs  Agents.hs  Approvals.hs  Chat.hs  Documents.hs  Knowledge.hs  Skills.hs
wisp-tui/src/Tui/Widgets/: Layout.hs  Scroll.hs  Time.hs
(+3 files in other folders)
