cabal-version: 3.0
name:          wisp-srv
version:       0.1.0.0
synopsis:      Wisp personal assistant backend
license:       BSD-3-Clause
author:        Gareth
build-type:    Simple

common warnings
    ghc-options: -Wall -Wunused-packages

executable wisp-srv
    import:           warnings
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    main-is:          Main.hs
    hs-source-dirs:   app, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
        RecordWildCards
        StrictData
    other-modules:
        App.Config
        App.Monad
        App.Env
        Domain.Account
        Domain.Activity
        Domain.Chat
        Domain.Classification
        Domain.Id
        Domain.Person
        Domain.Receipt
        Domain.Schema
        Http.Handlers.Activities
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.Health
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.Activity
        Infra.Db.Auth
        Infra.Db.Entity
        Infra.Db.Jobs
        Infra.Db.Migrations
        Infra.Db.Person
        Infra.Db.PollState
        Infra.Db.Receipt
        Infra.Claude.Client
        Infra.Google.Auth
        Infra.Google.Calendar
        Infra.Google.Gmail
        Infra.Google.TokenManager
        Services.CalendarPoller
        Services.Classifier
        Services.GmailPoller
        Services.PeopleResolver
        Services.Pipeline
        Services.Router
        Services.Scheduler
        Services.Chat
        Services.ClassificationQueue
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        aeson,
        yaml,
        time,
        mtl,
        transformers,
        postgresql-simple,
        http-client,
        http-client-tls,
        http-types,
        scotty,
        fast-logger,
        NanoID,
        mwc-random,
        directory,
        filepath,
        async,
        stm,
        neat-interpolation

test-suite wisp-srv-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
    other-modules:
        Domain.Account
        Domain.AccountSpec
        Domain.Activity
        Domain.ActivitySpec
        Domain.Chat
        Domain.ChatSpec
        Domain.Classification
        Domain.ClassificationSpec
        Domain.Id
        Domain.IdSpec
        Domain.Person
        Domain.PersonSpec
        Domain.Receipt
        Domain.ReceiptSpec
        Domain.Schema
        Domain.SchemaSpec
        App.Config
        App.ConfigSpec
        App.Monad
        App.Env
        Http.Handlers.Activities
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.Health
        Http.Handlers.HealthSpec
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.AccountSpec
        Infra.Db.Activity
        Infra.Db.ActivitySpec
        Infra.Db.Auth
        Infra.Db.Migrations
        Infra.Db.MigrationsSpec
        Infra.Db.Entity
        Infra.Db.EntitySpec
        Infra.Db.Jobs
        Infra.Db.JobsSpec
        Infra.Db.Person
        Infra.Db.PersonSpec
        Infra.Db.PollState
        Infra.Db.PollStateSpec
        Infra.Db.Receipt
        Infra.Db.ReceiptSpec
        Infra.Claude.Client
        Infra.Claude.ClientSpec
        Infra.Google.Auth
        Infra.Google.AuthSpec
        Infra.Google.Calendar
        Infra.Google.CalendarSpec
        Infra.Google.Gmail
        Infra.Google.GmailSpec
        Infra.Google.TokenManager
        Infra.Google.TokenManagerSpec
        Services.CalendarPoller
        Services.CalendarPollerSpec
        Services.Classifier
        Services.ClassifierSpec
        Services.GmailPoller
        Services.GmailPollerSpec
        Services.PeopleResolver
        Services.PeopleResolverSpec
        Services.Pipeline
        Services.PipelineSpec
        Services.Router
        Services.RouterSpec
        Services.Scheduler
        Services.Chat
        Services.ChatSpec
        Services.ClassificationQueue
        Services.ClassificationQueueSpec
        TestEnv
    build-tool-depends:
        hspec-discover:hspec-discover
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        aeson,
        yaml,
        time,
        mtl,
        transformers,
        fast-logger,
        NanoID,
        mwc-random,
        postgresql-simple,
        scotty,
        directory,
        filepath,
        http-client,
        http-client-tls,
        http-types,
        hspec,
        async,
        stm,
        neat-interpolation
