cabal-version: 3.0
name:          wisp-srv
version:       0.1.0.0
synopsis:      Wisp personal assistant backend
license:       BSD-3-Clause
author:        Gareth
build-type:    Simple

common warnings
    ghc-options: -Wall -Wunused-packages

executable wisp-srv
    import:           warnings
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    main-is:          Main.hs
    hs-source-dirs:   app, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
        RecordWildCards
        StrictData
    other-modules:
        Agents.Concierge
        Agents.Concierge.Classifier
        Agents.Dispatcher
        Agents.Housekeeper
        Agents.Insights
        Agents.Scheduler
        App.Config
        App.Monad
        App.Env
        Domain.Account
        Domain.Activity
        Domain.Agent
        Domain.Chat
        Domain.Classification
        Domain.Id
        Domain.Person
        Domain.Receipt
        Domain.Run
        Domain.Schema
        Http.Handlers.Activities
        Http.Handlers.Agents
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.Health
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.Activity
        Infra.Db.Auth
        Infra.Db.Entity
        Infra.Db.Jobs
        Infra.Db.Migrations
        Infra.Db.Notification
        Infra.Db.Person
        Infra.Db.PollState
        Infra.Db.Receipt
        Infra.Claude.Client
        Infra.Google.Auth
        Infra.Google.Calendar
        Infra.Google.Gmail
        Infra.Google.TokenManager
        Services.CalendarPoller
        Services.GmailPoller
        Services.PeopleResolver
        Services.Router
        Services.Scheduler
        Services.ClassificationQueue
        Services.Notification
        Services.NotificationLoop
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        aeson,
        yaml,
        time,
        tz,
        mtl,
        transformers,
        postgresql-simple,
        http-client,
        http-client-tls,
        http-types,
        scotty,
        fast-logger,
        NanoID,
        mwc-random,
        directory,
        filepath,
        async,
        stm,
        neat-interpolation,
        process

test-suite wisp-srv-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
    other-modules:
        Agents.Concierge
        Agents.Concierge.Classifier
        Agents.ConciergeSpec
        Agents.ConciergeAgentSpec
        Agents.Concierge.ClassifierSpec
        Agents.Dispatcher
        Agents.DispatcherSpec
        Agents.Housekeeper
        Agents.Insights
        Agents.InsightsSpec
        Agents.Scheduler
        Agents.SchedulerSpec
        Domain.Account
        Domain.AccountSpec
        Domain.Activity
        Domain.ActivitySpec
        Domain.Agent
        Domain.AgentSpec
        Domain.Chat
        Domain.ChatSpec
        Domain.Classification
        Domain.ClassificationSpec
        Domain.Id
        Domain.IdSpec
        Domain.Person
        Domain.PersonSpec
        Domain.Receipt
        Domain.ReceiptSpec
        Domain.Run
        Domain.RunSpec
        Domain.Schema
        Domain.SchemaSpec
        App.Config
        App.ConfigSpec
        App.Monad
        App.Env
        Http.Handlers.Activities
        Http.Handlers.Agents
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.Health
        Http.Handlers.HealthSpec
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.AccountSpec
        Infra.Db.Activity
        Infra.Db.ActivitySpec
        Infra.Db.Auth
        Infra.Db.Migrations
        Infra.Db.MigrationsSpec
        Infra.Db.Entity
        Infra.Db.EntitySpec
        Infra.Db.Jobs
        Infra.Db.JobsSpec
        Infra.Db.Person
        Infra.Db.PersonSpec
        Infra.Db.PollState
        Infra.Db.PollStateSpec
        Infra.Db.Receipt
        Infra.Db.ReceiptSpec
        Infra.Claude.Client
        Infra.Claude.ClientSpec
        Infra.Google.Auth
        Infra.Google.AuthSpec
        Infra.Google.Calendar
        Infra.Google.CalendarSpec
        Infra.Google.Gmail
        Infra.Google.GmailSpec
        Infra.Google.TokenManager
        Infra.Google.TokenManagerSpec
        Services.CalendarPoller
        Services.CalendarPollerSpec
        Services.GmailPoller
        Services.GmailPollerSpec
        Services.PeopleResolver
        Services.PeopleResolverSpec
        Services.Router
        Services.RouterSpec
        Services.Scheduler
        Services.ClassificationQueue
        Services.ClassificationQueueSpec
        Services.Notification
        Services.NotificationLoop
        Services.NotificationSpec
        Infra.Db.Notification
        TestEnv
    build-tool-depends:
        hspec-discover:hspec-discover
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        aeson,
        yaml,
        time,
        tz,
        mtl,
        transformers,
        fast-logger,
        NanoID,
        mwc-random,
        postgresql-simple,
        scotty,
        directory,
        filepath,
        http-client,
        http-client-tls,
        http-types,
        hspec,
        async,
        stm,
        neat-interpolation,
        process
