cabal-version: 3.0
name:          wisp-srv
version:       0.1.0.0
synopsis:      Wisp personal assistant backend
license:       BSD-3-Clause
author:        Gareth
build-type:    Simple

common warnings
    ghc-options: -Wall -Wunused-packages

executable wisp-srv
    import:           warnings
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    main-is:          Main.hs
    hs-source-dirs:   app, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
        RecordWildCards
        StrictData
    other-modules:
        Agents.Core
        Agents.Dispatcher
        Agents.Run
        Skills.Base
        Skills.Concierge
        Skills.Concierge.Classifier
        Skills.GitHub
        Skills.Housekeeper
        Skills.Insights
        Skills.Registry
        Skills.Research
        Skills.Scheduler
        Services.Tavily
        App.Config
        App.Monad
        App.Env
        Domain.Account
        Domain.Activity
        Domain.Agent
        Domain.Chat
        Domain.ChatEvent
        Domain.Classification
        Domain.Document
        Domain.ActivityDocument
        Domain.Id
        Domain.Person
        Domain.ProjectClassification
        Domain.Receipt
        Domain.Run
        Domain.Schema
        Domain.Session
        Domain.Skill
        Domain.Soul
        Domain.Summary
        Domain.Tenant
        Http.Handlers.Activities
        Http.Handlers.Agents
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.ChatStream
        Http.Handlers.Documents
        Http.Handlers.Health
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Handlers.Runs
        Http.Handlers.Skills
        Http.Handlers.Tenants
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.Activity
        Infra.Db.Auth
        Infra.Db.Entity
        Infra.Db.Jobs
        Infra.Db.Migrations
        Infra.Db.Notification
        Infra.Db.Person
        Infra.Db.PollState
        Infra.Db.Receipt
        Infra.Db.Run
        Infra.Db.Session
        Infra.Db.Soul
        Infra.Db.Summary
        Infra.Db.Tenant
        Infra.Db.Document
        Infra.Db.ActivityDocument
        Infra.Claude.Client
        Infra.GitHub.Auth
        Infra.GitHub.Commits
        Infra.GitHub.Events
        Infra.Google.Auth
        Infra.Google.Calendar
        Infra.Google.Gmail
        Infra.Google.TokenManager
        Services.CalendarPoller
        Services.GitHubPoller
        Services.GmailPoller
        Services.PeopleResolver
        Services.Router
        Services.Scheduler
        Services.ClassificationQueue
        Services.Knowledge
        Services.Notification
        Services.Summarizer
        Services.NotificationLoop
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        base64-bytestring,
        aeson,
        yaml,
        time,
        tz,
        mtl,
        transformers,
        postgresql-simple,
        http-client,
        http-client-tls,
        http-types,
        scotty,
        wai,
        fast-logger,
        NanoID,
        mwc-random,
        directory,
        filepath,
        async,
        stm,
        neat-interpolation,
        process,
        uuid,
        case-insensitive,
        vector

test-suite wisp-srv-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test, src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        DeriveGeneric
        GeneralizedNewtypeDeriving
        DerivingStrategies
        LambdaCase
        QuasiQuotes
        RecordWildCards
    other-modules:
        Agents.Core
        Agents.Dispatcher
        Agents.DispatcherSpec
        Agents.Run
        Agents.RunSpec
        Skills.Concierge
        Skills.Concierge.Classifier
        Skills.Concierge.ClassifierSpec
        Skills.ConciergeSpec
        Skills.Housekeeper
        Skills.Base
        Skills.Insights
        Skills.InsightsSpec
        Skills.Registry
        Skills.Scheduler
        Skills.SchedulerSpec
        Domain.Account
        Domain.AccountSpec
        Domain.Activity
        Domain.ActivitySpec
        Domain.ActivityDocument
        Domain.ActivityDocumentSpec
        Domain.Agent
        Domain.AgentSpec
        Domain.Chat
        Domain.ChatSpec
        Domain.Classification
        Domain.ClassificationSpec
        Domain.Document
        Domain.Id
        Domain.IdSpec
        Domain.Person
        Domain.PersonSpec
        Domain.ProjectClassification
        Domain.ProjectClassificationSpec
        Domain.Receipt
        Domain.ReceiptSpec
        Domain.Run
        Domain.RunSpec
        Domain.Schema
        Domain.SchemaSpec
        Domain.Session
        Domain.SessionSpec
        Domain.Skill
        Domain.SkillSpec
        Domain.Soul
        Domain.SoulSpec
        Domain.Summary
        Domain.SummarySpec
        Domain.Tenant
        Domain.TenantSpec
        App.Config
        App.ConfigSpec
        App.Monad
        App.Env
        Http.Handlers.Activities
        Http.Handlers.Agents
        Http.Handlers.Auth
        Http.Handlers.Chat
        Http.Handlers.Health
        Http.Handlers.HealthSpec
        Http.Handlers.People
        Http.Handlers.Pipeline
        Http.Handlers.Runs
        Http.Handlers.Tenants
        Http.Routes
        Http.Server
        Infra.Db.Account
        Infra.Db.AccountSpec
        Infra.Db.Activity
        Infra.Db.ActivitySpec
        Infra.Db.Auth
        Infra.Db.Migrations
        Infra.Db.MigrationsSpec
        Infra.Db.Entity
        Infra.Db.EntitySpec
        Infra.Db.Jobs
        Infra.Db.JobsSpec
        Infra.Db.Person
        Infra.Db.PersonSpec
        Infra.Db.PollState
        Infra.Db.PollStateSpec
        Infra.Db.Receipt
        Infra.Db.ReceiptSpec
        Infra.Db.Run
        Infra.Db.RunSpec
        Infra.Db.Session
        Infra.Db.SessionSpec
        Infra.Db.Soul
        Infra.Db.SoulSpec
        Infra.Db.Summary
        Infra.Db.SummarySpec
        Infra.Db.Tenant
        Infra.Db.TenantSpec
        Infra.Db.Document
        Infra.Db.ActivityDocument
        Infra.Db.ActivityDocumentSpec
        Infra.Claude.Client
        Infra.Claude.ClientSpec
        Infra.GitHub.Auth
        Infra.GitHub.AuthSpec
        Infra.GitHub.Commits
        Infra.GitHub.Events
        Infra.GitHub.EventsSpec
        Infra.Google.Auth
        Infra.Google.AuthSpec
        Infra.Google.Calendar
        Infra.Google.CalendarSpec
        Infra.Google.Gmail
        Infra.Google.GmailSpec
        Infra.Google.TokenManager
        Infra.Google.TokenManagerSpec
        Services.CalendarPoller
        Services.CalendarPollerSpec
        Services.GitHubPoller
        Services.GitHubPollerSpec
        Services.GmailPoller
        Services.GmailPollerSpec
        Services.PeopleResolver
        Services.PeopleResolverSpec
        Services.Router
        Services.RouterSpec
        Services.Scheduler
        Services.ClassificationQueue
        Services.ClassificationQueueSpec
        Services.Notification
        Services.NotificationLoop
        Services.NotificationSpec
        Infra.Db.Notification
        TestEnv
    build-tool-depends:
        hspec-discover:hspec-discover
    build-depends:
        base >=4.17 && <5,
        text,
        bytestring,
        aeson,
        yaml,
        time,
        tz,
        mtl,
        transformers,
        fast-logger,
        NanoID,
        mwc-random,
        postgresql-simple,
        scotty,
        wai,
        directory,
        filepath,
        http-client,
        http-client-tls,
        http-types,
        hspec,
        async,
        stm,
        neat-interpolation,
        process,
        uuid,
        case-insensitive,
        vector,
        base64-bytestring
